--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -21,6 +21,9 @@
     <script type='text/javascript' src="library/angularjs/angular-resource.min.js"></script>
     <script type='text/javascript' src="library/angularjs/angular-animate.min.js"></script>
 
+    <!-- three js -->
+    <script type='text/javascript' src="library/three.min.js"></script>
+
     <!-- bootstrap js library -->
     <script type="text/javascript" src="library/bootstrap/js/bootstrap.min.js"></script>
 
