--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -30,6 +30,10 @@
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="library/bootstrap/css/bootstrap.min.css">
 
+    <!-- video.js -->
+    <script type="text/javascript" src="library/video-js/video.js"></script>
+    <link rel="stylesheet" type="text/css" href="library/video-js/video-js.min.css">
+
     <!-- personnal CSS files -->
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 
