--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -10,36 +10,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- require js -->
-    <script type="text/javascript" src="library/require.js"></script>
+    <script type="text/javascript" src="/library/require.js"></script>
 
     <!-- jquery -->
-    <script type='text/javascript' src="library/jquery/jquery-2.1.0.min.js"></script>
+    <script type='text/javascript' src="/library/jquery/jquery-2.1.0.min.js"></script>
 
     <!-- angular js -->
-    <script type='text/javascript' src="library/angular-1.3.0-beta.17/angular.js"></script>
-    <script type='text/javascript' src="library/angular-1.3.0-beta.17/angular-route.js"></script>
-    <script type='text/javascript' src="library/angular-1.3.0-beta.17/angular-resource.js"></script>
-    <script type='text/javascript' src="library/angular-1.3.0-beta.17/angular-animate.js"></script>
+    <script type='text/javascript' src="/library/angular-1.3.0-beta.17/angular.js"></script>
+    <script type='text/javascript' src="/library/angular-1.3.0-beta.17/angular-route.js"></script>
+    <script type='text/javascript' src="/library/angular-1.3.0-beta.17/angular-resource.js"></script>
+    <script type='text/javascript' src="/library/angular-1.3.0-beta.17/angular-animate.js"></script>
 
     <!-- three js -->
-    <script type='text/javascript' src="library/three.min.js"></script>
+    <script type='text/javascript' src="/library/three.min.js"></script>
 
-    <!-- bootstrap js library -->
-    <script type="text/javascript" src="library/bootstrap/js/bootstrap.min.js"></script>
+    <!-- bootstrap js /library -->
+    <script type="text/javascript" src="/library/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- CSS bootstrap -->
-    <link rel="stylesheet" type="text/css" href="library/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/library/bootstrap/css/bootstrap.min.css">
 
     <!-- video js -->
-    <!--<script type="text/javascript" src="library/video-js/video.js"></script>-->
-    <link rel="stylesheet" type="text/css" href="library/video-js/video-js.min.css">
+    <!--<script type="text/javascript" src="/library/video-js/video.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="/library/video-js/video-js.min.css">
 
     <!-- chromecast api -->
     <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
 
     <!-- personnal js and CSS files -->
-    <script type="text/javascript" src="js/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+    <script type="text/javascript" src="/js/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 
     <title>MoviesCast</title>
 </head>
@@ -47,7 +47,40 @@
 
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        Movies
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Movies Cast</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-left">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+
+            <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Search</button>
+            </form>
+        </div>
     </div>
 </nav>
 
@@ -55,10 +88,7 @@
 
     <div class="menu">menu</div>
 
-
-
-
-    <div ng-view></div>
+    {{{body}}}
 
     <div class="clear"/>
 </div>
