--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" >
+<html lang="fr"  ng-app="Application">
 
 <head>
     <!-- meta -->
@@ -10,26 +10,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="/build/app.js"></script>
 
-    <!-- jquery -->
-    <!--<script type='text/javascript' src="/library/jquery/jquery-2.1.0.min.js"></script>-->
-    <!--<script type="text/javascript" src="/library/bootstrap/js/bootstrap.min.js"></script>-->
-    <!-- angular js -->
-    <!--<script type='text/javascript' src="/library/angular-1.3.9/angular.js"></script>-->
-    <!--<script type='text/javascript' src="/library/angular-1.3.9/angular-route.js"></script>-->
     <!--<script type='text/javascript' src="/library/angular-1.3.9/angular-resource.js"></script>-->
     <!--<script type='text/javascript' src="/library/angular-1.3.9/angular-animate.js"></script>-->
-    <!--&lt;!&ndash; three js &ndash;&gt;-->
-    <!--<script type='text/javascript' src="/library/three.min.js"></script>-->
-    <!--&lt;!&ndash; bootstrap js /library &ndash;&gt;-->
-    <!--<script type="text/javascript" src="/library/bootstrap/js/bootstrap.min.js"></script>-->
-    <!--&lt;!&ndash; CSS bootstrap &ndash;&gt;-->
+
+    <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="/library/bootstrap/css/bootstrap.min.css">
-    <!--&lt;!&ndash; video js &ndash;&gt;-->
-    <!--<link rel="stylesheet" type="text/css" href="/library/video-js/video-js.min.css">-->
-    <!--&lt;!&ndash; chromecast api &ndash;&gt;-->
+    <!-- video js -->
+    <link rel="stylesheet" type="text/css" href="/library/video-js/video-js.min.css">
+    <!-- chromecast api -->
     <!--<script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>-->
-    <!--&lt;!&ndash; personnal js and CSS files &ndash;&gt;-->
-    <!--<script type="text/javascript" src="/js/app.js"></script>-->
+
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 
     <title>MoviesCast</title>
